Fixed z-index bug and removed hover for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -678,6 +678,10 @@ body {
 		margin-bottom: 4vw;
 	}
 
+	.project-cell img {
+		opacity: 1;
+	}
+
 }
 
 /*----------------------------------------------------------------------------*/
